Added project standards, automated development standards, and completed backend domain services
Comprehensive overhaul of project infrastructure to enforce strict engineering standards across the monorepo. This commit introduces a complete suite of AI-assisted development tools, including Claude rules, GitHub instructions, and automated git hooks, while simultaneously delivering the feature-complete backend service layer for the v0.8.0 Cloud Sync milestone.

✨ Features
- Added feature-complete Spring Boot backend domain services, controllers, and entities for ActivityLog, BodyMeasurement, FastingSession, StepLog, TdeeProfile, and WaterLog
- Integrated Valkey-backed rate limiting with RateLimitFilter and bucket4j configuration
- Hardened Google OIDC integration with custom GoogleOidcVerifier and refined SecurityConfig
- Added V4__sync_support.sql Flyway migration to enable bidirectional cloud sync persistence
- Implemented comprehensive AuthController and AuthService for production-grade OIDC/JWT handling

🏗️ Refactoring & Type Safety
- Refactored JwtService and AuthService for improved token lifecycle management and OIDC claim validation
- Standardized backend DTOs with Javadoc and strict validation constraints
- Unified monorepo orchestration with a hierarchical Makefile system across root, apps, and individual services

🧪 Infrastructure & Testing
- Added comprehensive backend test suites (>1500 lines) covering rate limiting, OIDC verification, and all domain service logic
- Deployed .claude/ development rules, agents, and hooks to automate linting, security audits, and architectural alignment
- Established .github/ instruction sets and prompts to standardize AI agent behavior (Gemini/Copilot) across the codebase
- Integrated Checkstyle with google_checks.xml for strict Java style enforcement during the build lifecycle

📚 Documentation & Configuration
- Major updates to CLAUDE.md and GEMINI.md reflecting the v0.8.0 architecture and monorepo workflows
- Refined READ